--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                       <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="#">Features</a>
-                        <a class="nav-item nav-link" href="#">Pricing</a>
-                        <a class="nav-item nav-link disabled" href="#">Disabled</a>
+                        <a class="nav-item nav-link active" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                        <a class="nav-item nav-link" href="contact.html">Contact</a>
                       </div>
                     </div>
                   </nav>
@@ -29,14 +28,13 @@
 <div class="container ">
     <div class="jumbotron">
         <div class= "row">
-                <div class="col-md-4">
+
                 <h1 class="title-text">About Me</h1>
                 <hr/>
+
+                <div class="col-md-12">
+
                 <a style="float:left; margin:10px;" id="profile-pic" href="#"><img src="http://via.placeholder.com/200x200"></a>
-
-                </div>
-
-            <div class="col-md-8">
 
                 <p  id="about-me-text"></p>
                     Hello!  I'm Nic Miesmer, and welcome to my portfolio! 
@@ -49,12 +47,12 @@
                 fun, and engaging sport both mentally and physically.
                 </p>
 
-            <p id="about-me-text">
+                <p id="about-me-text">
                 &emsp; I graduated from Hoover Highschool in 2006, then went on to recieve my BS in Computer Science from the University of Akron
                 in 2013. Right out of school I got a job at Segmint Inc. working in their QA department before moving up to a position
                 as a full stack dev (I consider myself junior even though my title doesn't state it).  I joined the Full Stack Bootcamp at
                 Case West to gain more programming knowledge, and sharpen my skills.
-            </p>
+                </p>
         </div> 
     </div>
 </div>    
