fixed missing ending of a tag in nav bar

--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
                         
                         <h1 class="h1-div">Nic Miesmer</h1>
                           <div  class="navbar-nav nav-right">
-                            <a class="nav-item nav-link active" href="index.html">About Me 
+                            <a class="nav-item nav-link active" href="index.html">About Me </a>
                             <a class="nav-item nav-link" href="portfolio.html">Portfolio</a> 
-                            <a class="nav-item nav-link" href="contact.html">Contact</a> <span class="sr-only">(current)</span></a>
+                            <a class="nav-item nav-link" href="contact.html">Contact</a>
                         </div>
                       </nav>
         </div>
