changes to footer

--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
                     </div>
                   </nav>
     </div>
+<div class="container-fluid  main-content-background">
 
-<div class="container ">
+<div class="container">
     <div class="jumbotron">
+
         <div class= "row">
 
                 <h1 class="title-text">About Me</h1>
                 <hr/>
 
-                <div class="col-md-12">
+                <div class="col-xs-12">
 
                 <a style="float:left; margin:10px;" id="profile-pic" href="#"><img src="http://via.placeholder.com/200x200"></a>
 
@@ -51,9 +53,10 @@
                 as a full stack dev (I consider myself junior even though my title doesn't state it).  I joined the Full Stack Bootcamp at
                 Case West to gain more programming knowledge, and sharpen my skills.
                 </p>
-        </div> 
-    </div>
-</div>    
+            </div> 
+        </div>
+    </div>    
+</div>
       
     <footer class="footer">
           <span class="text-muted footer">Place sticky footer content here.</span>
