added crystal game link to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,9 @@
                                                         <p >Hangman</p>
                                                 </div>                                    </div>
                                     <div class="col-xs-4 col-sm-6">
-                                                <a href="#"><img src="assets/images/rpg_game.jpg"></a> 
+                                                <a href="https://nic-miesmer.github.io/unit-4-game/"><img src="assets/images/rpg_game.jpg"></a> 
                                                 <div class="img-text-block">
-                                                        <p >RPG Game</p>
+                                                        <p >Crystsal Game</p>
                                                 </div>
                                     </div>
                                 </div>
