Updated portfolio with new projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,9 +57,9 @@
                                                                 <p>Trivia Game</p>
                                                         </div>                                            </div>
                                             <div class="col-xs-4 col-sm-6">
-                                                        <a href="#"><img src="assets/images/rutgers.jpeg"></a> 
+                                                        <a href="https://nic-miesmer.github.io/TrainTime/"><img src="assets/images/rutgers.jpeg"></a> 
                                                         <div class="img-text-block">
-                                                            <p>Rutgers Info Widget</p>
+                                                            <p>Train Time</p>
                                                         </div>
                                             </div>
                                         </div>
@@ -67,9 +67,9 @@
                                 <div class="col-sm-12">
                                                 <div class="row">
                                                     <div class="col-xs-8 col-sm-6">
-                                                                <a href="#"><img src="assets/images/rps.jpg"></a> 
+                                                                <a href="https://case-ravenclaw.github.io/App/"><img src="assets/images/rps.jpg"></a> 
                                                                 <div class="img-text-block">
-                                                                        <p>Rock Paper Scissors</p>
+                                                                        <p>FourZato Group Project 1</p>
                                                                 </div>
                                                     </div>
                                                     <div class="col-xs-4 col-sm-6">
