update projects on page

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,25 +37,28 @@
                         <div class="col-sm-12">
                                 <div class="row">
                                     <div class="col-xs-8 col-sm-6">
-                                                <a href="#"><img src="assets/images/hangman.jpg"></a> 
+                                                <a href="https://cerulean-project-2-zoomates.herokuapp.com/"><img src="assets/images/rpg_game.jpg"></a> 
                                                 <div class="img-text-block">
-                                                        <p >Hangman</p>
-                                                </div>                                    </div>
+                                                        <p >ZooMates</p>
+                                                </div>                                    
+                                            </div>
                                     <div class="col-xs-4 col-sm-6">
-                                                <a href="https://nic-miesmer.github.io/unit-4-game/"><img src="assets/images/rpg_game.jpg"></a> 
+                                                <a href="https://nic-miesmer.github.io/unit-4-game/"><img src="assets/images/hangman.jpg"></a> 
                                                 <div class="img-text-block">
-                                                        <p >Crystsal Game</p>
+                                                        <p>Crystsal Game</p>
                                                 </div>
+
                                     </div>
                                 </div>
                         </div>
                         <div class="col-sm-12">
                                         <div class="row">
                                             <div class="col-xs-8 col-sm-6">
-                                                        <a href="#"><img src="assets/images/trivia.jpeg"></a> 
+                                                        <a href="https://case-ravenclaw.github.io/App/"><img src="assets/images/trivia.jpeg"></a> 
                                                         <div class="img-text-block">
-                                                                <p>Trivia Game</p>
-                                                        </div>                                            </div>
+                                                                <p>FourZato</p>
+                                                        </div>                                            
+                                                    </div>
                                             <div class="col-xs-4 col-sm-6">
                                                         <a href="https://nic-miesmer.github.io/TrainTime/"><img src="assets/images/rutgers.jpeg"></a> 
                                                         <div class="img-text-block">
